force-app/main/default/objects/LLMPromptTemplate__mdt/LLMPromptTemplate__mdt.object-meta.xml
<CustomObject>
    <label>LLM Prompt Template</label>
    <pluralLabel>LLM Prompt Templates</pluralLabel>
</CustomObject>