force-app/main/default/objects/LLMPromptTemplate__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <description>The Salesforce object API name this template applies to (e.g., Case).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>