force-app/main/default/objects/LLMPromptTemplate__mdt/fields/Prompt_Text__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Text__c</fullName>
    <label>Prompt Text</label>
    <description>The full prompt text sent to the LLM, including instructions for summarisation. Admins modify this field to tune summary output without code deployment.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>