force-app/main/default/objects/LLMPromptTemplate__mdt/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <description>Unique identifier for the prompt template (e.g., CaseTransferSummary_v1).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>